@@ -36,35 +36,35 @@ public class <%= controller_class_name %> {
 	@Path("<%= path %>")
 	public void create(<%= class_name %> <%= @model %>) {
 		validator.validate(<%= @model %>);
-		validator.onErrorForwardTo(this).form(<%= @model %>);
+		validator.onErrorUsePageOf(this).new<%= class_name %>();
 		repository.create(<%= @model %>);
 		result.redirectTo(this).index();
 	}
 	
 	@Get
 	@Path("<%= "#{path}/new" %>")
-	public void new<%= class_name %>() {
-		result.forwardTo(this).form(new <%= class_name %>());
+	public <%= class_name %> new<%= class_name %>() {
+		return new <%= class_name %>();
 	}
 	
 	@Put
 	@Path("<%= path %>")
 	public void update(<%= class_name %> <%= @model %>) {
 		validator.validate(<%= @model %>);
-		validator.onErrorForwardTo(this).form(<%= @model %>);
+		validator.onErrorUsePageOf(this).edit(<%= @model %>);
 		repository.update(<%= @model %>);
 		result.redirectTo(this).index();
 	}
 	
 	@Get
 	@Path("<%= "#{path}/{#{@model}.id}/edit" %>")
-	public void edit(<%= @model.capitalize %> <%= @model %>) {
-		result.forwardTo(this).form(repository.find(<%= @model %>.getId()));
+	public <%= class_name %> edit(<%= class_name %> <%= @model %>) {
+		return repository.find(<%= @model %>.getId());
 	}
 
 	@Get
 	@Path("<%= "#{path}/{#{@model}.id}/show" %>")
-	public <%= class_name %> show(<%= @model.capitalize %> <%= @model %>) {
+	public <%= class_name %> show(<%= class_name %> <%= @model %>) {
 		return repository.find(<%= @model %>.getId());
 	}
 
@@ -75,7 +75,4 @@ public class <%= controller_class_name %> {
 		result.redirectTo(this).index();  
 	}
 	
-	public <%= class_name %> form(<%= class_name %> <%= @model %>) {
-		return <%= @model %>;
-	}
 }
