@@ -49,8 +49,10 @@ Gem::Specification.new do |s|
      "lib/generators/scaffold_generator/controller_generator/controller_generator.rb",
      "lib/generators/scaffold_generator/controller_generator/templates/controller.erb",
      "lib/generators/scaffold_generator/freemarker_generator/freemarker_generator.rb",
+     "lib/generators/scaffold_generator/freemarker_generator/templates/edit.erb",
      "lib/generators/scaffold_generator/freemarker_generator/templates/form.erb",
      "lib/generators/scaffold_generator/freemarker_generator/templates/index.erb",
+     "lib/generators/scaffold_generator/freemarker_generator/templates/new.erb",
      "lib/generators/scaffold_generator/freemarker_generator/templates/show.erb",
      "lib/generators/scaffold_generator/model_generator/model_generator.rb",
      "lib/generators/scaffold_generator/model_generator/templates/model.erb",
